Added javascript file and removed dummy table data

--- a/UI/home.html
+++ b/UI/home.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width">
     <!--  CSS -->
     <link href="./css/style.css" rel="stylesheet">
+    <link href="./js/scripts.js" rel="stylesheet">
     <!-- Favicons -->
     <link rel="icon" href="" sizes="32x32" type="image/png">
 
@@ -118,24 +119,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>12-Dec-2017</td>
-                            <td>Officer Paul</td>
-                            <td>Bushenyi</td>
-                            <td><a href="./redflag_edit.html">Edit</a> | <a href="./redflag_confirm_delete.html">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>15-Jan-2016</td>
-                            <td>Hon. Ssempa Francis</td>
-                            <td>Kalangala</td>
-                            <td><a href="./redflag_edit.html">Edit</a> | <a href="./redflag_confirm_delete.html">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>24-Jun-2016</td>
-                            <td>Mag. Mugisha</td>
-                            <td>Kampala</td>
-                            <td><a href="./red_flag_edit.html">Edit</a> | <a href="./redflag_confirm_delete.html">Delete</a></td>
-                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
@@ -151,36 +135,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>12-Dec-2017</td>
-                            <td>Kamuli Rd</td>
-                            <td>Bushenyi</td>
-                            <td><a href="./intervention_edit.html">Edit</a> | <a href="./intervention_confirm_delete.html">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>15-Jan-2016</td>
-                            <td>River Nile</td>
-                            <td>Kalangala</td>
-                            <td><a href="./intervention_edit.html">Edit</a> | <a href="./intervention_confirm_delete.html">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>24-Jun-2016</td>
-                            <td>Bunyoni Bridge</td>
-                            <td>Kampala</td>
-                            <td><a href="./intervention_edit.html">Edit</a> | <a href="./intervention_confirm_delete.html">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>24-Oct-2016</td>
-                            <td>Security lights</td>
-                            <td>Kampala</td>
-                            <td><a href="./intervention_edit.html">Edit</a> | <a href="./intervention_confirm_delete.html">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>24-Oct-2016</td>
-                            <td>Sewerage</td>
-                            <td>Industrial Area</td>
-                            <td><a href="./intervention_edit.html">Edit</a> | <a href="./intervention_confirm_delete.html">Delete</a></td>
-                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
