Added get red-flags to scripts

--- a/UI/home.html
+++ b/UI/home.html
@@ -109,7 +109,7 @@
         <div class="tables">
             <div class="redflag-table">
                 <label class="table-header red">Your red flags</label>
-                <table>
+                <table id="redflag-table">
                     <thead>
                         <tr>
                             <th>Date</th>
@@ -125,7 +125,7 @@
             </div>
             <div class="intervention-table">
                 <label class="table-header intervention">Your interventions</label>
-                <table>
+                <table id="intervention-table">
                     <thead>
                         <tr>
                             <th>Date</th>
