--- a/UI/home.html
+++ b/UI/home.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body onload="loadRedFlags()">
     <div class="bg-image">
         <header id="main-header">
             <div class="container">
