removaed api files

--- a/UI/register.html
+++ b/UI/register.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width">
   <!--  CSS -->
   <link href="./css/style.css" rel="stylesheet">
+  <script src="./js/scripts.js" type="text/javascript"></script>
 
 </head>
 
@@ -18,7 +19,7 @@
     <div class="container">
       <div class="register-box">
         <h1>Register</h1>
-        <form action="./login.html">
+        <form action="">
           <p>Please fill in this form to create an account.</p>
           <hr>
 
@@ -52,7 +53,7 @@
 
           <div>
             <br>
-              <input type="submit" value="sign up">
+              <input type="submit" onclick="register()" value="sign up">
           </div>
           </din>
         </form>
