--- a/UI/home.html
+++ b/UI/home.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width">
     <!--  CSS -->
     <link href="./css/style.css" rel="stylesheet">
-    <link href="./js/scripts.js" rel="stylesheet">
+    <script src="./js/scripts.js" type="text/javascript"></script>
     <!-- Favicons -->
     <link rel="icon" href="" sizes="32x32" type="image/png">
 
