Added login and register scripts

--- a/UI/home.html
+++ b/UI/home.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="loadRedFlags()">
+<body onload="getRedflags()">
     <div class="bg-image">
         <header id="main-header">
             <div class="container">
