--- a/UI/login.html
+++ b/UI/login.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width">
     <!--  CSS -->
     <link href="./css/style.css" rel="stylesheet">
+    <script src="./js/scripts.js" type="text/javascript"></script>
 
 </head>
 
@@ -22,15 +23,13 @@
             </div>
             <div class="login-box">
                 <h1>Login</h1>
-                <form action="./home.html">
                     <p>Email</p>
-                    <input type="email" placeholder="Email" />
+                    <input type="email" placeholder="Email" id="login_email" />
                     <p>Password</p>
-                    <input type="password" placeholder="Password" />
-                    <input type="submit" value="Login">
+                    <input type="password" placeholder="Password" id="login_password"/>
+                    <input type="submit" value="Login" onclick="login()">
                     <a href="#">Forgot your password?</a><br>
                     <a href="./register.html">Do not have an account?</a>
-                </form>
             </div>
         </div>
     </div>
