--- a/UI/register.html
+++ b/UI/register.html
@@ -19,33 +19,32 @@
     <div class="container">
       <div class="register-box">
         <h1>Register</h1>
-        <form action="">
           <p>Please fill in this form to create an account.</p>
           <hr>
 
           <p>Email</p>
-          <input type="email" placeholder="Enter Email" name="email" required>
+          <input type="email" placeholder="Enter Email" id="email" required>
 
           <p>Username</p>
-          <input type="text" placeholder="Enter Username" name="username" required>
+          <input type="text" placeholder="Enter Username" id="username" required>
 
           <p>Phone number</p>
-          <input type="tel" placeholder="Enter phone number" name="phonenumber" required>
+          <input type="tel" placeholder="Enter phone number" id="phonenumber" required>
 
           <p>First Name</p>
-          <input type="text" placeholder="Enter first name" name="firstname" required>
+          <input type="text" placeholder="Enter first name" id="firstname" required>
 
           <p>Last Name</p>
-          <input type="text" placeholder="Enter last name" name="lastname" required>
+          <input type="text" placeholder="Enter last name" id="lastname" required>
 
           <p>Other Names</p>
-          <input type="text" placeholder="Enter other names" name="othernames" required>
+          <input type="text" placeholder="Enter other names" id="othernames">
 
           <p>Password</p>
-          <input type="password" placeholder="Enter Password" name="password" required>
+          <input type="password" placeholder="Enter Password" id="password" required>
 
           <p>Repeat Password</p>
-          <input type="password" placeholder="Repeat Password" name="password-repeat" required>
+          <input type="password" placeholder="Repeat Password" id="password-repeat" required>
 
           <br>
         
@@ -55,10 +54,9 @@
             <br>
               <input type="submit" onclick="register()" value="sign up">
           </div>
-          </din>
-        </form>
+          </div>
       </div>
-    </div>S
+    </div>
   </body>
 
 </html>
