--- a/UI/redflag_add.html
+++ b/UI/redflag_add.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width">
     <!--  CSS -->
     <link href="./css/style.css" rel="stylesheet">
-    <link src="./js/scripts.js" type="text/javascript">
+    <script src="./js/scripts.js" type="text/javascript"></script>
 
 </head>
 
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="flag-box-submit">
-        <input type="submit" value="Submit" onclick="postRedflags()">
+        <input type="submit" onclick="postRedflags()" value="Submit" >
     </div>
 </body>
 
