Added fetch red flags

--- a/UI/home.html
+++ b/UI/home.html
@@ -114,7 +114,7 @@
                         <tr>
                             <th>Date</th>
                             <th>Title</th>
-                            <th>Location</th>
+                            <th>Status</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -130,7 +130,7 @@
                         <tr>
                             <th>Date</th>
                             <th>Title</th>
-                            <th>location</th>
+                            <th>Status</th>
                             <th></th>
                         </tr>
                     </thead>
