renamed home to index

--- a/UI/redflag_add.html
+++ b/UI/redflag_add.html
@@ -23,7 +23,7 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="./home.html">Home</a></li>
+                    <li class="current"><a href="./index.html">Home</a></li>
                     <li id="account-circle"><a href="./login.html">Hello bisonlou</a></li>
                     <li id="account-circle"><a href="./admin.html">Admin</a></li>
                 </ul>
