--- a/UI/redflag_add.html
+++ b/UI/redflag_add.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="flag-box-submit">
-        <input type="submit" onclick="postRedflags()" value="Submit" >
+        <input type="submit" onclick="postIncident('red-flag')" value="Submit" >
     </div>
 </body>
 
