--- a/UI/index.html
+++ b/UI/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="getRedflags()">
+<body onload="getRedflags(); getInterventions();">
     <div class="bg-image">
         <header id="main-header">
             <div class="container">
@@ -25,7 +25,7 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="./home.html">Home</a></li>   
+                    <li class="current"><a href="./index.html">Home</a></li>   
                     <li><a href="./login.html">Hello bisonlou</a></li>
                     <li ><a href="./admin.html">Admin</a></li>
                 </ul>
