Added edit incident

--- a/UI/incident_edit.html
+++ b/UI/incident_edit.html
@@ -31,7 +31,7 @@
         </header>
     </div>
     <div class="container">
-        <form action="home.html" class="flag-box">
+        <div action="home.html" class="flag-box">
             <div class="left">
                 <p>Title</p>
                 <input type="text" placeholder="Title" id="title">
@@ -48,21 +48,7 @@
                 <input type="file">
                 <div class="media-table">
                     <table>
-                        <tr>
-                            <td>image_001.jpg</td>
-                            <td>250kb</td>
-                            <td><a href="#">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>image_002.jpg</td>
-                            <td>144kb</td>
-                            <td><a href="#">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>image_003.jpg</td>
-                            <td>205kb</td>
-                            <td><a href="#">Delete</a></td>
-                        </tr>
+
                     </table>
                 </div>
             </div>
@@ -71,26 +57,12 @@
                 <input type="file">
                 <div class="media-table">
                     <table>
-                        <tr>
-                            <td>video_001.mov</td>
-                            <td>10420kb</td>
-                            <td><a href="#">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>video_002.mp4</td>
-                            <td>25000kb</td>
-                            <td><a href="#">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td>video_003.mp4</td>
-                            <td>35200kb</td>
-                            <td><a href="#">Delete</a></td>
-                        </tr>
+
                     </table>
                 </div>
             </div>
+        </div>
     </div>
-    </form>
     <div class="flag-box-submit">
         <input type="submit" value="Submit Changes">
     </div>
