--- a/UI/incident_confirm_delete.html
+++ b/UI/incident_confirm_delete.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width">
     <!--  CSS -->
     <link href="./css/style.css" rel="stylesheet">
+    <script src="./js/scripts.js" type="text/javascript"></script>
+    <link rel="icon" href="./images/megaphone.png" sizes="32x32" type="image/png">
 
 </head>
 
@@ -30,14 +32,12 @@
 
     <div class="container">
         <div class="delete-box">
-            <form action="./home.html">
-                <p>Are you sure you want to delete this intervention.</p>
+                <p>Are you sure you want to delete this incident.</p>
                 <hr>
                 <div class="flag-box-submit">
-                    <input type="submit" value="Oh no!">
-                    <input type="submit" value="Absolutely">
+                    <input type="submit" value="Oh no!" onclick="navigate_to('index.html');">
+                    <input type="submit" value="Absolutely" onclick="deleteIncident();">
                 </div>
-            </form>
         </div>
 
 
