--- a/UI/index.html
+++ b/UI/index.html
@@ -11,7 +11,7 @@
     <link href="./css/style.css" rel="stylesheet">
     <script src="./js/scripts.js" type="text/javascript"></script>
     <!-- Favicons -->
-    <link rel="icon" href="" sizes="32x32" type="image/png">
+    <link rel="icon" href="./images/megaphone.png" sizes="32x32" type="image/png">
 
 </head>
 
@@ -25,7 +25,7 @@
                 <nav>
                     <ul>
                         <li id="account-name"></li>
-                        <li id="sign-out"><a href="#">sign out</a></li>
+                        <li id="sign-out"><a href="#" onclick="logout();">sign out</a></li>
                     </ul>
                 </nav>
             </div>           
