--- a/UI/redflag_add.html
+++ b/UI/redflag_add.html
@@ -7,9 +7,11 @@
 
     <title>iReporter | Add Red Flag.</title>
     <meta name="viewport" content="width=device-width">
-    <!--  CSS -->
-    <link href="./css/style.css" rel="stylesheet">
-    <script src="./js/scripts.js" type="text/javascript"></script>
+    <link rel="icon" href="./images/megaphone.png" sizes="32x32" type="image/png">
+    
+    
+    <!--  CSS -->    
+    <link href="./css/style.css" rel="stylesheet"/>   
 
 </head>
 
@@ -23,9 +25,10 @@
                 <nav>
                     <ul>
                         <li class="current"><a href="./index.html">Home</a></li>
+                        <li id="sign-out"><a href="#" onclick="logout();">sign out</a></li>
                     </ul>
                 </nav>
-            </div>            
+            </div>
         </header>
     </div>
     <div class="container">
@@ -33,32 +36,26 @@
             <p>Red flag created succesfully</p>
         </div>
         <div class="error-box" id="error-box">
-            </div>
+        </div>
         <div class="flag-box">
             <div class="left">
-                <p>Title</p>
                 <input type="text" placeholder="Title" id="title">
-                <p>Comment</p>
-                <textarea width="100px" height="300px" id="comment">Describe incident...</textarea>
+                <textarea id="comment" cols="100" rows="5" style="margin: 10px;" placeholder="Describe incident..."></textarea>
                 <p>Location</p>
-                <div class="form-group">
-                    <input type="text" disabled="disabled">
-                    <button type="button">Get coordinates</button>
-                </div>
+                <div id="map"></div>
             </div>
-            <div class="middle">
+            <div class="right">
                 <p>Image evidence</p>
                 <input type="file" id="image" multiple onchange="displayImages(this.files); return false;" />
                 <div class="media-table">
                     <table id="images_table">
                     </table>
                 </div>
-            </div>
-            <div class="right">
+
                 <p>Video evidence</p>
                 <input type="file" disabled>
                 <div class="media-table">
-                    <table>
+                    <table id="images_table">
 
                     </table>
                 </div>
@@ -66,8 +63,13 @@
         </div>
     </div>
     <div class="flag-box-submit">
-        <input type="submit" onclick="postIncident('red-flag');" value="Submit" >
+        <input type="submit" onclick="postIncident('red-flag');" value="Submit">
     </div>
 </body>
+<!--  JAVASCRIPT -->  
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+<!--map box-->
+<script src="./js/scripts.js" type="text/javascript"></script>
 
 </html>
