--- a/UI/register.html
+++ b/UI/register.html
@@ -10,6 +10,7 @@
   <!--  CSS -->
   <link href="./css/style.css" rel="stylesheet">
   <script src="./js/scripts.js" type="text/javascript"></script>
+  <link rel="icon" href="./images/megaphone.png" sizes="32x32" type="image/png">
 
 </head>
 
